Cudd.hsc


cuddBddUnivAbstract :: DdManager -> DdNode -> DdNode -> DdNode
cuddBddUnivAbstract = cuddArg2 c_cuddBddUnivAbstract

foreign import ccall safe "cudd.h Cudd_bddIte_s"
    c_cuddBddIte :: Ptr CDdManager -> Ptr CDdNode -> Ptr CDdNode -> Ptr CDdNode -> IO (Ptr CDdNode)

cuddBddIte :: DdManager -> DdNode -> DdNode -> DdNode -> DdNode
cuddBddIte = cuddArg3 c_cuddBddIte

foreign import ccall safe "cudd.h Cudd_bddSwapVariables_s"
    c_cuddBddSwapVariables :: Ptr CDdManager -> Ptr CDdNode -> Ptr (Ptr CDdNode) -> Ptr (Ptr CDdNode) -> CInt -> IO (Ptr CDdNode)

cuddBddSwapVariables :: DdManager -> DdNode -> [DdNode] -> [DdNode] -> DdNode
cuddBddSwapVariables (DdManager m) (DdNode d) s1 s2 = DdNode $ unsafePerformIO $ 
    withForeignPtr d $ \dp -> 
    withForeignArrayPtrLen (map unDdNode s1) $ \s1 s1ps -> 
    withForeignArrayPtrLen (map unDdNode s2) $ \s2 s2ps -> do
    when (s1 /= s2) (error "cuddBddSwapVariables: variable lists have different sizes")
    node <- c_cuddBddSwapVariables m dp s1ps s2ps (fromIntegral s1)
    newForeignPtrEnv deref m node

foreign import ccall safe "cudd.h Cudd_bddPermute_s"
    c_cuddBddPermute :: Ptr CDdManager -> Ptr CDdNode -> Ptr CInt -> IO (Ptr CDdNode)

cuddBddPermute :: DdManager -> DdNode -> [Int] -> DdNode 
cuddBddPermute (DdManager m) (DdNode d) indexes = DdNode $ unsafePerformIO $ 
    withForeignPtr d $ \dp -> 
    withArray (map fromIntegral indexes) $ \ip -> do
    node <- c_cuddBddPermute m dp ip 
    newForeignPtrEnv deref m node

makePermutArray :: Int -> [Int] -> [Int] -> [Int]
makePermutArray size x y = elems $ accumArray (flip const) 0 (0, size-1) ascList
    where
    ascList = [(i, i) | i <- [0..size-1]] ++ zip x y 

cuddBddShift :: DdManager -> DdNode -> [Int] -> [Int] -> DdNode
cuddBddShift (DdManager m) (DdNode d) from to = DdNode $ unsafePerformIO $
    withForeignPtr d $ \dp -> do
    dp <- evaluate dp
    size <- c_cuddReadSize m 
    let perm = makePermutArray (fromIntegral size) from to
    withArray (map fromIntegral perm) $ \pp -> do
    node <- c_cuddBddPermute m dp pp
    newForeignPtrEnv deref m node

foreign import ccall safe "cudd.h Cudd_Xgty_s"
	c_cuddXgty :: Ptr CDdManager -> CInt -> Ptr (Ptr CDdNode) -> Ptr (Ptr CDdNode) -> Ptr (Ptr CDdNode) -> IO (Ptr CDdNode)

cuddXgty :: DdManager -> [DdNode] -> [DdNode] -> DdNode
cuddXgty (DdManager m) x y = DdNode $ unsafePerformIO $ 
    withForeignArrayPtrLen (map unDdNode x) $ \xl xp -> 
    withForeignArrayPtrLen (map unDdNode y) $ \yl yp -> do
    when (xl /= yl) (error "cuddXgty: variable lists have different sizes")
    node <- c_cuddXgty m (fromIntegral xl) nullPtr xp yp
    newForeignPtrEnv deref m node

foreign import ccall safe "cudd.h Cudd_Xeqy_s"
	c_cuddXeqy :: Ptr CDdManager -> CInt -> Ptr (Ptr CDdNode) -> Ptr (Ptr CDdNode) -> IO (Ptr CDdNode)

cuddXeqy :: DdManager -> [DdNode] -> [DdNode] -> DdNode
cuddXeqy (DdManager m) x y = DdNode $ unsafePerformIO $ 
    withForeignArrayPtrLen (map unDdNode x) $ \xl xp -> 
    withForeignArrayPtrLen (map unDdNode y) $ \yl yp -> do
    when (xl /= yl) (error "cuddXeqy: variable lists have different sizes")
    node <- c_cuddXeqy m (fromIntegral xl) xp yp
    newForeignPtrEnv deref m node

foreign import ccall safe "cudd.h Cudd_Inequality_s"
	c_cuddInequality :: Ptr CDdManager -> CInt -> CInt -> Ptr (Ptr CDdNode) -> Ptr (Ptr CDdNode) -> IO (Ptr CDdNode)

cuddInequality :: DdManager -> Int -> Int -> [DdNode] -> [DdNode] -> DdNode
cuddInequality (DdManager m) n c x y = DdNode $ unsafePerformIO $ 
    withForeignArrayPtr (map unDdNode x) $ \xp -> 
    withForeignArrayPtr (map unDdNode y) $ \yp -> do
    node <- c_cuddInequality m (fromIntegral n) (fromIntegral c) xp yp
    newForeignPtrEnv deref m node

foreign import ccall safe "cudd.h Cudd_Disequality_s"
	c_cuddDisequality :: Ptr CDdManager -> CInt -> CInt -> Ptr (Ptr CDdNode) -> Ptr (Ptr CDdNode) -> IO (Ptr CDdNode)

cuddDisequality :: DdManager -> Int -> Int -> [DdNode] -> [DdNode] -> DdNode
cuddDisequality (DdManager m) n c x y = DdNode $ unsafePerformIO $
    withForeignArrayPtr (map unDdNode x) $ \xp -> 
    withForeignArrayPtr (map unDdNode y) $ \yp -> do
    node <- c_cuddDisequality m (fromIntegral n) (fromIntegral c) xp yp
    newForeignPtrEnv deref m node

foreign import ccall safe "cudd.h Cudd_bddInterval_s"
    c_cuddBddInterval :: Ptr CDdManager -> CInt -> Ptr (Ptr CDdNode) -> CInt -> CInt -> IO (Ptr CDdNode)

cuddBddInterval :: DdManager -> [DdNode] -> Int -> Int -> DdNode
cuddBddInterval (DdManager m) vararr lower upper =  DdNode $ unsafePerformIO $ 
    withForeignArrayPtrLen (map unDdNode vararr) $ \sz vp -> do
    node <- c_cuddBddInterval m (fromIntegral sz) vp (fromIntegral lower) (fromIntegral upper)
    newForeignPtrEnv deref m node

foreign import ccall safe "cudd.h Cudd_NodeReadIndex"
    c_cuddNodeReadIndex :: Ptr CDdNode -> IO CInt

cuddNodeReadIndex :: DdNode -> Int
cuddNodeReadIndex (DdNode d) = fromIntegral $ unsafePerformIO $ withForeignPtr d c_cuddNodeReadIndex 

foreign import ccall safe "cudd.h Cudd_DagSize"
    c_cuddDagSize :: Ptr CDdNode -> IO CInt

cuddDagSize (DdNode d) = fromIntegral $ unsafePerformIO $ withForeignPtr d c_cuddDagSize 

foreign import ccall safe "cudd.h Cudd_IndicesToCube_s"
    c_cuddIndicesToCube :: Ptr CDdManager -> Ptr CInt -> CInt -> IO (Ptr CDdNode)

cuddIndicesToCube :: DdManager -> [Int] -> DdNode
cuddIndicesToCube (DdManager m) indices = DdNode $ unsafePerformIO $ 
    withArrayLen (map fromIntegral indices) $ \size ip -> do
    node <- c_cuddIndicesToCube m ip (fromIntegral size)
    newForeignPtrEnv deref m node

foreign import ccall safe "cudd.h Cudd_bddLICompaction_s"
    c_cuddBddLICompaction :: Ptr CDdManager -> Ptr CDdNode -> Ptr CDdNode -> IO (Ptr CDdNode)

cuddBddLICompaction :: DdManager -> DdNode -> DdNode -> DdNode
cuddBddLICompaction = cuddArg2 c_cuddBddLICompaction

foreign import ccall safe "cudd.h Cudd_bddMinimize_s"
    c_cuddBddMinimize :: Ptr CDdManager -> Ptr CDdNode -> Ptr CDdNode -> IO (Ptr CDdNode)

cuddBddMinimize :: DdManager -> DdNode -> DdNode -> DdNode
cuddBddMinimize = cuddArg2 c_cuddBddMinimize


newtype Dddmp_VarInfoType = Dddmp_VarInfoType {varInfoTypeVal :: CInt}
#{enum Dddmp_VarInfoType, Dddmp_VarInfoType
  , dddmp_varids      = DDDMP_VARIDS
  , dddmp_varpermids  = DDDMP_VARPERMIDS
  , dddmp_varauxids   = DDDMP_VARAUXIDS
  , dddmp_varnames    = DDDMP_VARNAMES
  , dddmp_vardefault  = DDDMP_VARDEFAULT
  }

newtype Dddmp_Mode = Dddmp_Mode {dddmpMode :: CInt}
#{enum Dddmp_Mode, Dddmp_Mode
  , dddmp_mode_text    = DDDMP_MODE_TEXT
  , dddmp_mode_binary  = DDDMP_MODE_BINARY
  , dddmp_mode_default = DDDMP_MODE_DEFAULT
  }


newtype Dddmp_Status = Dddmp_Status {dddmpStatus :: CInt} deriving (Eq, Show)
#{enum Dddmp_Status, Dddmp_Status
  , dddmp_failure    = DDDMP_FAILURE
  , dddmp_success    = DDDMP_SUCCESS
  } 


foreign import ccall safe "dddmp.h Dddmp_cuddBddStore"
    c_dddmpBddStore :: Ptr CDdManager -> CString -> Ptr CDdNode -> Ptr CString -> Ptr CInt -> CInt -> CInt -> CString -> Ptr CFile -> IO CInt

cuddBddStore :: DdManager -> String -> DdNode -> [Int] -> Dddmp_Mode -> Dddmp_VarInfoType -> String -> IO Dddmp_Status
cuddBddStore (DdManager m) name (DdNode node) auxids mode varinfo fname = do
    pauxids <- case auxids of
                [] -> return nullPtr
                _ -> newArray (map fromIntegral auxids :: [CInt])
    withForeignPtr node $ \dp -> do 
    withCString name $ \pname -> do
    withCString fname $ \pfname -> do
        ret <- c_dddmpBddStore m pname dp nullPtr pauxids (dddmpMode mode) (varInfoTypeVal varinfo) pfname nullPtr
        return $ Dddmp_Status ret

-- Extremely ugly and unsafe way to convert BDD to String via file
bddToString :: (MonadError String me) => DdManager -> DdNode -> me String
bddToString m node = unsafePerformIO $ 
    catch (do let fname = show (unDdNode node) ++ ".bdd"
              ret <- cuddBddStore m fname node [] dddmp_mode_text dddmp_varids fname
              --putStrLn $ "ret = " ++ (show ret)
              if ret == dddmp_success
                      then do str <- readFile fname
                              removeFile fname
                              return $ return str
                      else return $ throwError $ "Failed to serialise BDD (status: " ++ show (dddmpStatus ret) ++ ")")
          (return . throwError . show)
    

newtype Dddmp_VarMatchType = Dddmp_VarMatchType {dddmpMatchType :: CInt} deriving (Eq, Show)
#{enum Dddmp_VarMatchType, Dddmp_VarMatchType
  , dddmp_var_matchids     = DDDMP_VAR_MATCHIDS
  , dddmp_var_matchpermids = DDDMP_VAR_MATCHPERMIDS
  , dddmp_var_matchauxids  = DDDMP_VAR_MATCHAUXIDS
  , dddmp_var_matchnames   = DDDMP_VAR_MATCHNAMES
  , dddmp_var_composeids   = DDDMP_VAR_COMPOSEIDS
  } 

foreign import ccall safe "dddmp.h Dddmp_cuddBddLoad_s"
    c_dddmpBddLoad :: Ptr CDdManager -> CInt -> Ptr CString -> Ptr CInt -> Ptr CInt -> CInt -> CString -> Ptr CFile -> IO (Ptr CDdNode)

cuddBddLoad :: DdManager -> Dddmp_VarMatchType -> [Int] -> [Int] -> Dddmp_Mode -> String -> IO DdNode
cuddBddLoad (DdManager m) matchtype auxids composeids mode fname = do
    pauxids <- case auxids of
                 [] -> return nullPtr
                 _ -> newArray (map fromIntegral auxids :: [CInt])
    pcomposeids <- case auxids of
                     [] -> return nullPtr
                     _ -> newArray (map fromIntegral composeids :: [CInt])
    withCString fname $ \pfname -> do
        node <- c_dddmpBddLoad m (dddmpMatchType matchtype) nullPtr pauxids pcomposeids (dddmpMode mode) pfname nullPtr
        if node == nullPtr
            then ioError $ userError "Dddmp_cuddBddLoad failed"
            else do 
                    fp <- newForeignPtrEnv deref m node
                    return $ DdNode fp

-- BDD from string via file
bddFromString :: MonadError String me => DdManager -> String -> me DdNode
bddFromString m str = unsafePerformIO $ 
    catch (do let fname = "_fromString.bdd"
              writeFile fname str
              node <- cuddBddLoad m dddmp_var_matchids [] [] dddmp_mode_text fname
              removeFile fname
              return $ return node)
          (return . throwError . show)

--Bdd implication
cuddBddImp :: DdManager -> DdNode -> DdNode -> DdNode
cuddBddImp m l r = cuddBddOr m (cuddNot m l) r

foreign import ccall safe "cudd.h Cudd_bddPickOneMinterm_s"
	c_cuddBddPickOneMinterm :: Ptr CDdManager -> Ptr CDdNode -> Ptr (Ptr CDdNode) -> CInt -> IO (Ptr CDdNode)

cuddBddPickOneMinterm :: DdManager -> DdNode -> [DdNode] -> Maybe DdNode
cuddBddPickOneMinterm (DdManager m) (DdNode d) vars = unsafePerformIO $
	withForeignPtr d $ \dp -> 
	withForeignArrayPtrLen (map unDdNode vars) $ \vs vp -> do
	node <- c_cuddBddPickOneMinterm m dp vp (fromIntegral vs)
	if (node == nullPtr) then return Nothing else do
		nd <- newForeignPtrEnv deref m node
		return $ Just $ DdNode nd

foreign import ccall safe "cudd.h Cudd_PrintInfo"
	c_cuddPrintInfo :: Ptr CDdManager -> Ptr CFile -> IO (CInt)

cuddPrintInfo :: DdManager -> Ptr CFile -> IO (Int)
cuddPrintInfo (DdManager m) cf = liftM fromIntegral $ c_cuddPrintInfo m cf

foreign import ccall safe "cuddWrap.h getStdOut"
	c_getStdOut :: IO (Ptr CFile)

cStdOut = unsafePerformIO c_getStdOut

instance NFData DdNode

foreign import ccall safe "cudd.h Cudd_ReadPerm"
    c_cuddReadPerm :: Ptr CDdManager -> CInt -> IO CInt

cuddReadPerm :: DdManager -> Int -> Int
cuddReadPerm (DdManager m) i = fromIntegral $ unsafePerformIO $ c_cuddReadPerm m (fromIntegral i)

foreign import ccall safe "cudd.h Cudd_ReadInvPerm"
    c_cuddReadInvPerm :: Ptr CDdManager -> CInt -> IO CInt

cuddReadInvPerm :: DdManager -> Int -> Int
cuddReadInvPerm (DdManager m) i = fromIntegral $ unsafePerformIO $ c_cuddReadInvPerm m (fromIntegral i)

cuddReadPerms :: DdManager -> [Int]
cuddReadPerms m = map (cuddReadPerm m) [0..(cuddReadSize m - 1)]

cuddReadInvPerms :: DdManager -> [Int]
cuddReadInvPerms m = map (cuddReadInvPerm m) [0..(cuddReadSize m -1)]
